--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,6 +6,9 @@ log4j.rootLogger=DEBUG, stdout
 
 # My logging configuration...
 log4j.logger.org.mybatis.jpetstore=DEBUG
+log4j.logger.org.apache.ibatis=DEBUG
+log4j.logger.java.sql=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
 
 ## Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
